--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "dayjs": "^1.11.10",
     "framer-motion": "^11.0.14",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
