--- a/package.json
+++ b/package.json
@@ -17,15 +17,20 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/parisienne": "^5.0.12",
+    "@fontsource/roboto": "^5.0.12",
     "dayjs": "^1.11.10",
     "framer-motion": "^11.0.14",
+    "konva": "^9.3.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-konva": "^18.2.10",
     "react-router-dom": "^6.22.3",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "use-image": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
