--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "easy-start-german",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
+  "license": "MIT",
+  "author": "hsk.coder@gmail.com",
   "scripts": {
     "dev": "vite --host 0.0.0.0",
     "build": "tsc && vite build --mode production && cp ./dist/index.html ./dist/404.html",
